Bug 1711318 - Reset some properties for scrollbars so scrollbar-caching keeps working when they're not part of the 'all' shorthand.
This was causing style changes from the cached -> uncached style, which
in this case caused reframes because -moz-control-character-visibility
causes frame reconstruction.

Differential Revision: https://phabricator.services.mozilla.com/D115157

--- a/toolkit/content/minimal-xul.css
+++ b/toolkit/content/minimal-xul.css
@@ -45,6 +45,8 @@
 
     /* These properties are not included in 'all'. */
     -moz-list-reversed: initial;
+    -moz-context-properties: initial;
+    -moz-control-character-visibility: initial;
     -moz-font-smoothing-background-color: initial;
     -moz-min-font-size-ratio: initial;
     math-depth: initial;
